<resources>
    <string name="app_name">GrowCerveau</string>

    <string name="GoBack">Retour</string>

    <!-- ********** ACTIVITY ********** -->

    <!-- CompteActivity -->
    <string name="CompteActivity_title">Comptes</string>

    <!-- ConnectionActivity -->
    <string name="ConnectionActivity_title">Connexion</string>
    <string name="ConnectionActivity_btn_connex">Se connecter</string>
    <string name="ConnectionActivity_hint_pseudo">pseudo</string>
    <string name="ConnectionActivity_hint_mdp">mot de passe</string>

    <!-- ExerciceActivity -->
    <string name="ExerciceActivity_load">Chargement de la question...</string>

    <!-- HomePageActivity -->
    <string name="HomePageActivity_title">Bonjour ! Choisis une activité pour commencer l\'entrainement !</string>

    <!-- InscriptionActivity -->
    <string name="InscriptionActivity_title">Inscription</string>
    <string name="InscriptionActivity_btn_inscript">S\'inscrire</string>
    <string name="InscriptionActivity_hint_nom">Nom</string>
    <string name="InscriptionActivity_hint_prenom">Prénom</string>
    <string name="InscriptionActivity_hint_pseudo">Pseudo</string>
    <string name="InscriptionActivity_hint_mdp">Mot de passe</string>

    <!-- MainActivity -->
    <string name="MainActivity_title">Bienvenu sur GrowCerveau</string>
    <string name="MainActivity_btn_connex">Se connecter</string>
    <string name="MainActivity_btn_inscript">S\'inscrire</string>
    <string name="MainActivity_btn_anonyme">Continuer en anonyme</string>

    <!-- NavigationActivity -->
    <string name="NavigationActivity_title">Choix de la matière</string>

    <!-- QASActivity -->
    <string name="QASActivity_valider">Valider</string>
    <string name="QASActivity_consigne_default">Consigne</string>
    <string name="QASActivity_enonce_default">Enoncé</string>
    <string name="QASActivity_hint">...</string>

    <!-- QATActivity -->
    <string name="QATActivity_valider">Valider</string>
    <string name="QATActivity_hint_rep">...</string>
    <string name="QATActivity_bloc1_default">Bloc 1</string>
    <string name="QATActivity_bloc2_default">Bloc 2</string>
    <string name="QATActivity_consigne_default">Consignes</string>

    <!-- QCMActivity -->
    <string name="QCMActivity_enonce_default">Enoncé</string>
    <string name="QCMActivity_consigne_default">Consignes</string>

    <!-- ResultActivity -->
    <string name="ResultatsActivity_title">Résultats</string>
    <string name="ResultatsActivity_score">score</string>
    <string name="ResultatsActivity_acceuil">Accueil</string>
    <string name="ResultatsActivity_matiere_default">Matière</string>
    <string name="ResultatsActivity_nouvelle_serie">Rejouer</string>

    <!-- ********** TEMPLATE ********** -->

    <!-- Template Compte -->
    <string name="TemplateCompte_pseudo">Pseudo</string>
    <string name="TemplateCompte_prenom_et_nom">Prénom Nom</string>

    <!-- Template Matière-->
    <string name="TemplateMatiere_title">Matière</string>
    <string name="TemplateNavigation_btn_hint_sousMatiere">Sous matière</string>
    <string name="GoBackToHomePage">Matières</string>

    <!-- Template Sous Matière-->
    <string name="TemplateSousMatiere_title">Sous matière</string>

    <!-- Template QCM Proposition-->
    <string name="TemplateQCMProposition_title">proposition</string>

    <!-- Template Resultats-->
    <string name="TemplateResultats_enonce">énoncé</string>
    <string name="TemplateResultats_repUti">Réponse utilisateur</string>
    <string name="TemplateResultats_rep">Réponse correct</string>

</resources>
