<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hello_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QATActivity">

    <TextView
        android:id="@+id/consigne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QATActivity_consigne_default"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/qat_bloc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/QATActivity_bloc1_default"/>

        <EditText
            android:id="@+id/qat_reponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/QATActivity_hint_rep"
            />

        <TextView
            android:id="@+id/qat_bloc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/QATActivity_bloc2_default"/>

    </LinearLayout>

    <Button
        android:id="@+id/QATActivity_Valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/QATActivity_valider"
        android:onClick="QATActivity_Valider"/>

</LinearLayout>